--- a/index.html
+++ b/index.html
@@ -113,15 +113,28 @@
                 </div>
             </div>
         </div>
+
+        <div class="l-wrapper">
+            <button class="p-modalBtn" @click="openItem">{ ここをクリックすると、モーダルが開きます。}</button>
+        </div>
+
+        <div class="p-modal" :class="{'is-open': isModalActive}">
+            <!-- { clickで表示したいmodal_content部分 } -->
+            <img class="grid_image" src="https://www.patagonia.jp/dis/dw/image/v2/ABBM_PRD/on/demandware.static/-/Sites-patagonia-master/default/dw2d90660a/images/hi-res/25921_SMDB.jpg?sw=750&sh=750&sm=fit&sfrm=png"
+                alt="">
+        </div>
+
+
     </div>
+
     <footer>
 
     </footer>
 
 
-    <!-- <script src="https://cdn.jsdelivr.net/npm/vue@2.5.17/dist/vue.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.5.17/dist/vue.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="main.js"></script> -->
+    <script src="main.js"></script>
 </body>
 
 </html>
