メニュー変更

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </form>
         </div>
 
-        <i class="fas fa-book story_img"></i>
+        <i class="fas fa-book-open story_img"></i>
         <i class="fas fa-tshirt wear_img"></i>
         <i class="fas fa-sign-in-alt login_img"></i>
 
